fix: Update tech

--- a/resume.tex
+++ b/resume.tex
@@ -153,7 +153,7 @@
         \resumeItem
           {Implemented automation of data management for CCPA compliance and to reduce the manual work of over 600 inquiries per month for "Delete My Data", "See My Data" and "Do Not Sell My Data" requests.}
       \resumeItemListEnd
-      {\small{Tech: JavaScript, React, Redux, Next.js, HTML, CSS, Sass (SCSS), Twig, Bootstrap, Node.js, npm, Jest, React Testing Library, Babel, ESLint, Husky, Webpack, CircleCI, jQuery, PostCSS, Visual Studio Code, Git}\vspace{5pt}}
+      {\small{Tech: HTML, CSS, Sass, styled-jsx, CSS Modules, Tailwind CSS, Bootstrap, JavaScript, React, Redux, Next.js, Jest, React Testing Library, ESLint, Prettier, Stylelint, Git}\vspace{5pt}}
 
     \resumeSubheading
       {Front End Engineer}{\href{https://americantours.com/}{AmericanTours International, LLC \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Nov 2019 – Mar 2020 \footnote{Project cut short due to COVID-19}}
@@ -179,7 +179,7 @@
         \resumeItem
           {Integrated code linting and auto-formatting for JS/JSX files as part of test suite, and VS Code.}
       \resumeItemListEnd
-      {\small{Tech: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}\vspace{5pt}}
+      {\small{Tech: HTML, CSS, Sass, JavaScript, React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, ESLint, Prettier, SVN with git-svn}\vspace{5pt}}
 
     \resumeSubheading
       {Software Engineer}{\href{https://www.switchfly.com/}{Switchfly, LLC \externalLink \footnotemark[2]}}{Feb 2014 – Aug 2019}
@@ -205,7 +205,7 @@
         \resumeItem
           {Peer-reviewed other people's code as "Subject Matter Expect" of the shopping experience.}
       \resumeItemListEnd
-      {\small{Tech: JavaScript, Java, HTML, CSS, Sass (SCSS), Ember.js, Handlebars.js, Git, Gulp, JSHint, Karma, Mocha, Chai, npm, jQuery, Selenium, Jenkins, Ant, Maven, FreeMarker, ColdFusion, PostgreSQL, IntelliJ IDEA}\vspace{5pt}}
+      {\small{Tech: HTML, CSS, Sass, JavaScript, Ember.js, Java, Spring MVC, Selenium, Git, Mocha, Chai}\vspace{5pt}}
 
     \resumeSubheading
       {Senior Front End Engineer}{\href{https://evolvemediallc.com/}{Evolve Media, LLC \externalLink \footnote{via \href{https://intugo.co/}{Intugo}}}}{Jul 2013 – Feb 2014}
@@ -218,7 +218,7 @@
           \resumeItem
             {Examples: \href{https://www.thefashionspot.com/}{theFashionSpot \externalLink}, \href{https://www.momtastic.com/}{Momtastic \externalLink}, \href{https://www.superherohype.com/}{SuperHeroHype \externalLink}}
         \resumeItemListEnd
-        {\small{Tech: JavaScript, PHP, WordPress, HTML, CSS with Sass (SCSS), Compass, and Susy, jQuery, SVN with git-svn, Jenkins, Ant, npm, Grunt, JSHint, Capistrano}\vspace{5pt}}
+        {\small{Tech: HTML, CSS, Sass, JavaScript, jQuery, PHP, WordPress, SVN with git-svn}\vspace{5pt}}
 
     \resumeSubheading
       {Application Development Engineer}{\href{https://www.optum.com/}{OptumInsight \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Jan 2009 – Jun 2012}
@@ -226,7 +226,7 @@
         \resumeItem
           {Worked remotely, as Application Development Engineer, extending and maintaining an EMR Lite system, related services, and applications.}
       \resumeItemListEnd
-      {\small Tech: Java, Java EE, Servlets, JavaScript, LotusScript, Formula Language, Lotus Notes, Lotus Domino, Tomcat, HTML, CSS, XML, XPath, XSLT, SVN, CVS, RCS, Maven, Ant, Make, Jenkins}
+      {\small Tech: HTML, CSS, JavaScript, Java, Servlets, Lotus Notes/Domino, XML, XPath, XSLT, SVN}
 
   \resumeSubHeadingListEnd
 
