--- a/resume.tex
+++ b/resume.tex
@@ -146,14 +146,18 @@
 \section{Employment}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Front End Engineer}{\href{https://www.consumertrack.com/}{ConsumerTrack, Inc. \externalLink \footnote{via \href{https://www.encora.com/}{Encora}}}}{Apr 2020 – Present}
+      {Senior Frontend Engineer}{\href{https://www.consumertrack.com/}{ConsumerTrack, Inc. \externalLink \footnote{Full-time}}}{Feb 2021 – Present}
+    \resumeSubheading
+      {Frontend Engineer}{\href{https://www.consumertrack.com/}{ConsumerTrack, Inc. \externalLink \footnote{via \href{https://www.encora.com/}{Encora}}}}{Apr 2020 – Feb 2021}
       \resumeItemListStart
         \resumeItem
-          {Working remotely, focused on Front End Engineering for \href{https://www.importantscore.com}{ImportantScore.com \externalLink} and \href{https://www.gofreecredit.com}{GOFreeCredit.com \externalLink} providing consumers easy, fast, and secure online access to their credit score and credit monitoring services via the national credit bureaus: Experian, and TransUnion}
+          {Working remotely, focused on Frontend Engineering for \href{https://www.gofreecredit.com}{GOFreeCredit.com \externalLink} and \href{https://www.importantscore.com}{ImportantScore.com \externalLink} providing consumers easy, fast, and secure online access to their credit score and credit monitoring services via the national credit bureaus: Experian, and TransUnion}
         \resumeItem
-          {Led and implemented styling architecture and strategy for \href{https://www.gofinancialadvice.com}{GOFinancialAdvice.com \externalLink} resulting in $<$5 kB, code linting, auto formatting, testing, and their integrations to the developer flow (VS Code, hooks, etc.) and in CircleCI.}
+          {Leading the migration and modernization of GOFreeCredit.com's Frontend Tech Stack with a system of reusable, composable, and themeable (via Design Tokens) component library.}
         \resumeItem
           {Led Web performance efforts to improve our performance score and Web Vitals, as part of our team mission, which has resulted in a 68\% (mobile) and 17\% (desktop) increase in performance score points for GOFreeCredit.com. And a 43\% (mobile) and 17\% (desktop) increase for ImportantScore.com.}
+        \resumeItem
+          {Led and implemented styling architecture and strategy for \href{https://www.gofinancialadvice.com}{GOFinancialAdvice.com \externalLink} resulting in $<$5 kB, code linting, auto formatting, testing, and their integrations to the developer flow (VS Code, hooks, etc.) and in CircleCI.}
         \resumeItem
           {Implemented several other performance optimizations: next-gen image formats, image optimizations, visible text during webfont load, reduced requests size, eliminated dead dependencies, added resource hints, asynchronous/lazy loading of images and render-blocking resources.}
         \resumeItem
@@ -161,13 +165,13 @@
         \resumeItem
           {Implemented automation of data management for CCPA compliance and to reduce the manual work of over 600 inquiries per month for "Delete My Data", "See My Data" and "Do Not Sell My Data" requests.}
       \resumeItemListEnd
-      {\small{Tech: HTML, CSS, Sass, styled-jsx, CSS Modules, Tailwind CSS, Bootstrap, JavaScript, React, Redux, Next.js, Jest, React Testing Library, ESLint, Prettier, Stylelint, Amazon S3, AWS Lambda, Git}}
+      {\small{Tech: HTML, CSS, Sass, styled-components, styled-jsx, CSS Modules, Tailwind CSS, Bootstrap, JavaScript, React, Redux, Next.js, Jest, React Testing Library, ESLint, Prettier, Stylelint, Amazon S3, AWS Lambda, Git}}
 
     \resumeSubheading
-      {Front End Engineer}{\href{https://americantours.com/}{AmericanTours International, LLC \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Nov 2019 – Mar 2020 \footnote{Project cut short due to COVID-19}}
+      {Frontend Engineer}{\href{https://americantours.com/}{AmericanTours International, LLC \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Nov 2019 – Mar 2020 \footnote{Project funding ended due to COVID-19}}
       \resumeItemListStart
         \resumeItem
-          {Worked remotely, focused on Front End Engineering and leading an Engineering team of two in charge of implementing a modern, fast, and aesthetic re-imagining of ATI's internal administration tool used by travel agents for payment and transaction review, and processing.}
+          {Worked remotely, focused on Frontend Engineering and leading an Engineering team of two in charge of implementing a modern, fast, and aesthetic re-imagining of ATI's internal administration tool used by travel agents for payment and transaction review, and processing.}
         \resumeItem
           {Designed the shapes, payload/content, and headers of the HTTP API requests and responses.}
         \resumeItem
@@ -187,13 +191,13 @@
         \resumeItem
           {Integrated code linting and auto-formatting for JS/JSX files as part of test suite, and VS Code.}
       \resumeItemListEnd
-      {\small{Tech: HTML, CSS, Sass, JavaScript, React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, ESLint, Prettier, SVN with git-svn}}
+      {\small{Tech: HTML, CSS, Sass, JavaScript, React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, ESLint, Prettier, SVN with git-svn}\vspace{28pt}}
 
     \resumeSubheading
-      {Software Engineer (Front End)}{\href{https://www.switchfly.com/}{Switchfly, LLC \externalLink \footnotemark[2]}}{Feb 2014 – Aug 2019}
+      {Software Engineer (Front End)}{\href{https://www.switchfly.com/}{Switchfly, LLC \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Feb 2014 – Aug 2019}
       \resumeItemListStart
         \resumeItem
-          {Worked remotely, focused on Front End Engineering and maintenance of a SaaS platform that powers travel, loyalty, social, payment, and mobile products for multiple clients.}
+          {Worked remotely, focused on Frontend Engineering and maintenance of a SaaS platform that powers travel, loyalty, social, payment, and mobile products for multiple clients.}
         \resumeItem
           {Implemented interstitial/loading page for better SEO and accessibility.}
         \resumeItem
@@ -216,19 +220,19 @@
       {\small{Tech: HTML, CSS, Sass, JavaScript, Ember.js, Java, Spring MVC, Selenium, Git, Mocha, Chai}}
 
     \resumeSubheading
-      {Senior Front End Engineer}{\href{https://evolvemediallc.com/}{Evolve Media, LLC \externalLink \footnote{via \href{https://intugo.co/}{Intugo}}}}{Jul 2013 – Feb 2014}
+      {Senior Frontend Engineer}{\href{https://evolvemediallc.com/}{Evolve Media, LLC \externalLink \footnote{via \href{https://intugo.co/}{Intugo}}}}{Jul 2013 – Feb 2014}
     \resumeSubheading
-      {Front End Engineer}{\href{https://evolvemediallc.com/}{Evolve Media, LLC \externalLink \footnotemark[4]}}{Jul 2012 – Jul 2013}
-        \resumeItemListStart
-          \resumeItem
-            {Worked remotely, focused on Front End Engineering for multiple heavily trafficked and highly ranked websites targeting, among other things: women, fashion, sports, gaming and entertainment.}
-          \resumeItem
-            {Examples: \href{https://www.thefashionspot.com/}{theFashionSpot \externalLink}, \href{https://www.momtastic.com/}{Momtastic \externalLink}, \href{https://www.superherohype.com/}{SuperHeroHype \externalLink}}
-        \resumeItemListEnd
-        {\small{Tech: HTML, CSS, Sass, JavaScript, jQuery, PHP, WordPress, SVN with git-svn}}
+      {Frontend Engineer}{\href{https://evolvemediallc.com/}{Evolve Media, LLC \externalLink \footnotemark[6]}}{Jul 2012 – Jul 2013}
+      \resumeItemListStart
+        \resumeItem
+          {Worked remotely, focused on Frontend Engineering for multiple heavily trafficked and highly ranked websites targeting, among other things: women, fashion, sports, gaming and entertainment.}
+        \resumeItem
+          {Examples: \href{https://www.thefashionspot.com/}{theFashionSpot \externalLink}, \href{https://www.momtastic.com/}{Momtastic \externalLink}, \href{https://www.superherohype.com/}{SuperHeroHype \externalLink}}
+      \resumeItemListEnd
+      {\small{Tech: HTML, CSS, Sass, JavaScript, jQuery, PHP, WordPress, SVN with git-svn}}
 
     \resumeSubheading
-      {Application Development Engineer}{\href{https://www.optum.com/}{OptumInsight \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Jan 2009 – Jun 2012}
+      {Application Development Engineer}{\href{https://www.optum.com/}{OptumInsight \externalLink \footnotemark[5]}}{Jan 2009 – Jun 2012}
       \resumeItemListStart
         \resumeItem
           {Worked remotely, as Application Development Engineer, extending and maintaining an EMR Lite system, related services, and applications.}
