--- a/resume.tex
+++ b/resume.tex
@@ -134,7 +134,7 @@
     & \small{LinkedIn: \href{https://linkedin.com/in/alebelcor}{linkedin.com/in/alebelcor}}\\\\
 \end{tabularx}
 
-\small I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of experience with a specialty and passion for UI/UX, Web performance, and Web accessibility.
+\small I'm a Software Engineer from Mexico, working remotely, focused on Web Front End with 10+ years of experience with a specialty and passion for UI/UX, Web performance, and Web accessibility.
 
 % ==========================================================================
 
@@ -151,9 +151,11 @@
       {Frontend Engineer}{\href{https://www.consumertrack.com/}{ConsumerTrack, Inc. \externalLink \footnote{via \href{https://www.encora.com/}{Encora}}}}{Apr 2020 – Feb 2021}
       \resumeItemListStart
         \resumeItem
-          {Working remotely, focused on Frontend Engineering for \href{https://www.gofreecredit.com}{GOFreeCredit.com \externalLink} and \href{https://www.importantscore.com}{ImportantScore.com \externalLink} providing consumers easy, fast, and secure online access to their credit score and credit monitoring services via the national credit bureaus: Experian, and TransUnion}
+          {Working full-time remotely, focused on Frontend Engineering for \href{https://www.gofreecredit.com}{GOFreeCredit.com \externalLink} and \href{https://www.importantscore.com}{ImportantScore.com \externalLink} providing consumers easy, fast, and secure online access to their credit score and credit monitoring services via TransUnion and Experian.}
         \resumeItem
-          {Leading the migration and modernization of GOFreeCredit.com's Frontend Tech Stack with a system of reusable, composable, and themeable (via Design Tokens) component library.}
+          {Leading newest Frontend hosted flow integration with \href{https://www.credit.com}{Credit.com \externalLink} (ExtraCredit).}
+        \resumeItem
+          {Led the migration and modernization of GOFreeCredit.com's Frontend Tech Stack with a system of reusable, composable, and themeable (via Design Tokens) component library.}
         \resumeItem
           {Led Web performance efforts to improve our performance score and Web Vitals, as part of our team mission, which has resulted in a 68\% (mobile) and 17\% (desktop) increase in performance score points for GOFreeCredit.com. And a 43\% (mobile) and 17\% (desktop) increase for ImportantScore.com.}
         \resumeItem
@@ -165,7 +167,7 @@
         \resumeItem
           {Implemented automation of data management for CCPA compliance and to reduce the manual work of over 600 inquiries per month for "Delete My Data", "See My Data" and "Do Not Sell My Data" requests.}
       \resumeItemListEnd
-      {\small{Tech: HTML, CSS, Sass, styled-components, styled-jsx, CSS Modules, Tailwind CSS, Bootstrap, JavaScript, React, Redux, Next.js, Jest, React Testing Library, ESLint, Prettier, Stylelint, Amazon S3, AWS Lambda, Git}}
+      {\small{Tech: HTML, CSS, Sass, styled-components, styled-jsx, CSS Modules, Tailwind CSS, Bootstrap, JavaScript, React, React Hooks, Next.js, Redux, Jest, React Testing Library, Storybook, ESLint, Prettier, Stylelint, PostCSS, Git, Changesets, Turborepo, Babel, Figma, Zeplin}}
 
     \resumeSubheading
       {Frontend Engineer}{\href{https://americantours.com/}{AmericanTours International, LLC \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Nov 2019 – Mar 2020 \footnote{Project funding ended due to COVID-19}}
@@ -285,10 +287,10 @@
       \textbf{Software Engineering}{: Agile Software Development, Software Release Cycle, Unit Testing, Integration Testing, End-to-end Testing, Continuous Integration, Software Security, Static Code Analysis}
     }
     \item{
-      \textbf{Front End (Web)}{: HTML, CSS, JavaScript, Web Performance, Web Accessibility, React, React Hooks, Redux, CSS-in-JS, Sass (SCSS), Bootstrap}
+      \textbf{Front End (Web)}{: HTML, CSS, Sass, CSS-in-JS, JavaScript, React, React Hooks, Redux, Web Performance, Web Accessibility}
     }
     \item{
-      \textbf{Tools}{: Node.js, npm, Yarn, ESLint, Prettier, Jest, React Testing Library, Git, Visual Studio Code}
+      \textbf{Tools}{: Node.js, npm, Yarn, Next.js, ESLint, Prettier, PostCSS, Stylelint, Jest, React Testing Library, Git, Visual Studio Code}
     }
   \resumeSubHeadingListEnd
 
